[tool.poetry]
name = "soc_network"
version = "0.1.0"
description = ""
authors = ["Kozenko Valeriy <Osmiylantan@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.46"
passlib = "^1.7.4"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.4"}
bcrypt = "^4.0.1"
asyncpg = "^0.27.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# PYTEST

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
